--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@
 # This file lists all contributors to the repository.
 
 Hicham Beihaqi <beihaqihicham@gmail.com>
+Faiza RABHI <faizarabhi08@gmail.com>
